--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -1,3 +1,72 @@
 // Place all the styles related to the Pages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+body {
+  background: -moz-linear-gradient(top, #33383f 0%, #1e242b 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(top, #33383f 0%,#1e242b 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom, #33383f 0%,#1e242b 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+
+  min-height: 100vh;
+}
+
+.profile {
+
+  &__description {
+    background: transparent;
+    border: 0;
+    border-bottom: 2px solid #4dd166;
+    color: #fff;
+    margin-bottom: 10%;
+    width: 75vw;
+
+    &:focus {
+      outline: 0;
+    }
+  }
+
+  &__form {
+    margin-top: 10%;
+    text-align: center;
+    width: 100%;
+  }
+
+  &__name {
+    background: transparent;
+    border: 0;
+    border-bottom: 2px solid #4dd166;
+    color: #fff;
+    height: 30px;
+    margin-bottom: 10%;
+    margin-top: 10%;
+    width: 75vw;
+
+    &:focus {
+      outline: 0;
+    }
+  }
+
+  &__picture {
+    border-radius: 50%;
+    width: 150px;
+  }
+
+  &__simulator {
+    background-color: transparent;
+    border: 0;
+  }
+
+  &__submit {
+    background: -moz-linear-gradient(top, #33383f 0%, #1e242b 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top, #33383f 0%,#1e242b 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom, #33383f 0%,#1e242b 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+
+    border-color: #4dd166;
+    border-width: 2px;
+    border-style: solid;
+    border-radius: 20px;
+    color: #4dd166;
+    font-weight: bold;
+    padding: 10px 30px;
+  }
+}
