--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -16,9 +16,11 @@ body {
     background: transparent;
     border: 0;
     border-bottom: 2px solid #4dd166;
+    border-radius: 0;
     color: #fff;
     margin-bottom: 10%;
     width: 75vw;
+    font-size: 16px;
 
     &:focus {
       outline: 0;
@@ -35,11 +37,13 @@ body {
     background: transparent;
     border: 0;
     border-bottom: 2px solid #4dd166;
+    border-radius: 0;
     color: #fff;
     height: 30px;
     margin-bottom: 10%;
     margin-top: 10%;
     width: 75vw;
+    font-size: 16px;
 
     &:focus {
       outline: 0;
