--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -8,6 +8,9 @@ body {
   background: linear-gradient(to bottom, #33383f 0%,#1e242b 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 
   min-height: 100vh;
+
+  margin: 0;
+  padding: 0;
 }
 
 .profile {
