--- a/app/assets/stylesheets/search.scss
+++ b/app/assets/stylesheets/search.scss
@@ -3,6 +3,8 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .search {
+  background-image: url(https://d13yacurqjgara.cloudfront.net/users/950779/screenshots/2961711/whrevr_new-01.jpg);
+  background-size: 200vw;
   display: flex;
   justify-content: space-between;
   flex-flow: column;
@@ -37,10 +39,18 @@
     border-width: 2px;
     border-style: solid;
     border-radius: 0px;
+    display: block;
     font-size: 16px;
     color: white;
     font-weight: bold;
     padding: 20px 30px;
-    width: 100%;
+    width: 70%;
+    margin: auto;
+    margin-bottom: 50px;
+  }
+
+  &__title {
+    color: #fff;
+    text-align: center;
   }
 }
