Show sports in downcase

--- a/app/assets/stylesheets/search.scss
+++ b/app/assets/stylesheets/search.scss
@@ -17,6 +17,7 @@
     width: calc(100% / 4);
     display: flex;
     justify-content: center;
+    text-transform: capitalize;
   }
 
   &__checks {
