--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -11,6 +11,14 @@ body {
 
   margin: 0;
   padding: 0;
+
+  max-width: 414px;
+  margin: auto;
+
+  font-family: monospace;
+  letter-spacing: 0.054em;
+
+  color: #fff;
 }
 
 .profile {
@@ -22,7 +30,7 @@ body {
     border-radius: 0;
     color: #fff;
     margin-bottom: 10%;
-    width: 75vw;
+    width: 90%;
     font-size: 16px;
 
     &:focus {
@@ -45,7 +53,7 @@ body {
     height: 30px;
     margin-bottom: 10%;
     margin-top: 10%;
-    width: 75vw;
+    width: 90%;
     font-size: 16px;
 
     &:focus {
@@ -59,16 +67,19 @@ body {
   }
 
   &__submit {
-    background: -moz-linear-gradient(top, #33383f 0%, #1e242b 100%); /* FF3.6-15 */
-    background: -webkit-linear-gradient(top, #33383f 0%,#1e242b 100%); /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(to bottom, #33383f 0%,#1e242b 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-
-    border-color: #4dd166;
+    background: #4dd166;
+    border-color: darken(#4dd166, 10%);
     border-width: 2px;
     border-style: solid;
-    border-radius: 20px;
-    color: #4dd166;
+    border-radius: 0px;
+    color: #fff;
+    display: inline-block;
+    font-size: 16px;
     font-weight: bold;
+    margin-top: 10%;
     padding: 10px 30px;
+    text-decoration: none;
+    text-transform: uppercase;
+    width: 75%;
   }
 }
