--- a/app/assets/stylesheets/search.scss
+++ b/app/assets/stylesheets/search.scss
@@ -3,8 +3,11 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .search {
-  background-image: url(https://d13yacurqjgara.cloudfront.net/users/950779/screenshots/2961711/whrevr_new-01.jpg);
-  background-size: 200vw;
+  background-image: url('/start.jpg');
+  background-size: 50%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-color: #333333;
   display: flex;
   justify-content: space-between;
   flex-flow: column;
@@ -13,10 +16,11 @@
   &__check {
     align-items: center;
     background-color: #2c325d;
-    height: 75px;
-    width: calc(100% / 4);
     display: flex;
+    flex-direction: column;
+    height: 75px;
     justify-content: center;
+    width: calc(100% / 4);
     text-transform: capitalize;
   }
 
@@ -26,11 +30,25 @@
   }
 
   &__checktext {
+    display: block;
     color: #fff;
     font-size: 16px;
+    width: 100%;
+    text-align: center;
+
     *:checked + &{
-      background-color: #fff;
-      color: #000;
+      background-color: darken(#2c325d, 10%);
+      color: gray;
+    }
+  }
+
+  &__icon {
+    display: block;
+    text-align: center;
+    width: 100%;
+    svg {
+      height: 20px;
+      fill: white;
     }
   }
 
