--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -8,14 +8,24 @@
 
   &__deck {
     color: #fff;
+    font-size: 18px;
+    font-weight: bold;
+    font-family: monospace;
+    text-shadow: 1px 2px 3px rgba(22, 22, 22, 1);
+    line-height: 1.6;
+    margin: 5px 35px;
   }
 
   &__headline {
     color: #fff;
+    font-family: monospace;
+    font-size: 18px;
+
   }
 
   &__name {
     color: #fff;
+    font-family: sans-serif;;
   }
 
   &__start {
